# athena

./: .gitignore  README.md  TUTORIAL.md  pyproject.toml
athena/: __init__.py  __main__.py  cli.py  config.py
athena/data/: content_provider.py  etf_holdings.py  filings.py  fundamental_provider.py  market_flow_provider.py  market_provider.py  political_trades.py  social.py
athena/evidence/: models.py  normalizer.py  store.py
athena/llm/: analyst.py  prompts.py  schema.py
athena/outputs/: AVGO_report_20260702_162901.json  AVGO_report_20260702_162901.md  MRVL_report_20260702_162726.json  MRVL_report_20260702_162726.md  NOK_report_20260702_162949.json  NOK_report_20260702_162949.md  NVDA_report_20260702_162624.json  NVDA_report_20260702_162624.md  RKLB_report_20260702_163422.json  RKLB_report_20260702_163422.md
athena/probability/: __init__.py  calibration.py  engine.py
athena/reports/: chinese_report.py
athena/signals/: catalysts.py  flow.py  fundamentals.py  macro.py  political.py  risk.py  sentiment.py  supply_chain.py  technical.py  valuation.py
athena/validation/: __init__.py  backtest.py  cases.py  metrics.py  outcomes.py
docs/: 01_PRODUCT_REQUIREMENTS.md  02_SYSTEM_ARCHITECTURE.md  03_DATA_SOURCE_CONTRACT.md  04_SIGNAL_FRAMEWORK.md  05_AGENT_WORKFLOW.md  06_LONGBRIDGE_INTEGRATION.md  07_LLM_RESEARCH_PROTOCOL.md  08_RISK_AND_DECISION_RULES.md  09_VALIDATION_AND_BACKTEST.md  10_CODEX_IMPLEMENTATION_PLAN.md  README.md  REVIEW_FEEDBACK_ANALYSIS.md
tests/: __init__.py  test_evidence.py  test_market_provider.py  test_signals.py  test_technical.py
