[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
version = "0.1.0"
description = "Athena — AI 投资研究系统：判断股票未来3-6个月 +20%/-10% 概率"
requires-python = ">=3.9"
dependencies = [
    "longbridge>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["athena*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
